--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -134,7 +134,7 @@
                     android:layout_width="410px"
                     android:layout_height="3px"
                     android:layout_gravity="center_horizontal"
-                    android:src="@color/red_v2" />
+                    android:src="@color/themeColor" />
 
                 <LinearLayout
                     android:id="@+id/btnReGenerateOtp"
@@ -151,7 +151,7 @@
                         android:gravity="center"
                         android:layout_gravity="center_horizontal"
                         android:text="@string/resend_OTP"
-                        android:textColor="@color/new_orange"
+                        android:textColor="@color/themeColor"
                         android:textSize="26px"
                         android:visibility="visible"/>
 
@@ -160,7 +160,7 @@
                         android:layout_width="148px"
                         android:layout_height="2px"
                         android:layout_gravity="center_horizontal"
-                        android:background="@color/red_v2"
+                        android:background="@color/themeColor"
                         android:textColor="@drawable/white_color_selector"
                         android:visibility="visible"/>
 
@@ -235,7 +235,7 @@
             android:layout_marginTop="84px"
             android:background="@drawable/background_white_rounded_orange_bordered"
             android:text="@string/login"
-            android:textColor="@color/red_v2"
+            android:textColor="@color/themeColor"
             android:textSize="@dimen/button_text_size"
             android:visibility="visible"/>
 
