--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -57,7 +57,7 @@
                 android:layout_width="2px"
                 android:layout_height="match_parent"
                 android:layout_marginStart="6px"
-                android:background="@color/new_orange"
+                android:background="@color/themeColor"
                 android:visibility="gone"/>
 
             <Spinner
