--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_show_average_sallary.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_show_average_sallary.xml
@@ -38,7 +38,7 @@
                     android:paddingStart="20px"
                     android:paddingEnd="20px"
                     android:text="@string/did_you_know"
-                    android:textColor="@color/theme_color"
+                    android:textColor="@color/themeColor"
                     android:textSize="38px"
                     android:visibility="visible"/>
                 <View
