--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_corner_orange_bordered.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_corner_orange_bordered.xml
@@ -5,7 +5,7 @@
     <solid android:color="@color/white"/>
     <stroke
         android:width="2px"
-        android:color="@color/new_orange"
+        android:color="@color/themeColor"
         />
 
 </shape>
