--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_red_v2_bordered.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_red_v2_bordered.xml
@@ -5,7 +5,7 @@
     <solid android:color="@color/white"/>
     <stroke
         android:width="2px"
-        android:color="@color/red_v2"
+        android:color="@color/themeColor"
     />
 
 </shape>
