--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/bg_msg_me.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/bg_msg_me.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/theme_color" />
+            <solid android:color="@color/themeColor" />
             <corners android:radius="5dp" />
         </shape>
     </item>
