--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/button_white_theme_border.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/button_white_theme_border.xml
@@ -4,7 +4,7 @@
     <item  android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/white_light_dark"/>
-            <stroke android:color="@color/theme_color_alpha"
+            <stroke android:color="@color/themeColorLight"
                     android:width="1dp"/>
             <corners android:radius="3dp"/>
         </shape>
@@ -12,7 +12,7 @@
     <item >
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
-            <stroke android:color="@color/theme_color"
+            <stroke android:color="@color/themeColor"
                     android:width="1dp"/>
             <corners android:radius="3dp"/>
         </shape>
