--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_round_corner_normal.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_round_corner_normal.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
 
-    <solid android:color="@color/new_orange"/>
+    <solid android:color="@color/themeColor"/>
     <corners android:bottomRightRadius="@dimen/button_corner_radius"
              android:bottomLeftRadius="@dimen/button_corner_radius"
              android:topLeftRadius="@dimen/button_corner_radius"
