--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
@@ -63,7 +63,7 @@
                     android:layout_width="2px"
                     android:layout_height="match_parent"
                     android:layout_marginStart="6px"
-                    android:background="@color/new_orange"/>
+                    android:background="@color/themeColor"/>
 
                 <EditText
                     android:id="@+id/emailEt"
