--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -284,7 +284,7 @@
                     android:singleLine="true"
                     android:text="@string/rupee_zero"
                     android:layout_marginBottom="25px"
-                    android:textColor="@color/red_v2"
+                    android:textColor="@color/themeColor"
                     android:textSize="70px"/>
                 <RelativeLayout
                     android:id="@+id/relativeLayoutWalletCaptive"
