--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -46,7 +46,7 @@
                 android:layout_centerVertical="true"
                 android:padding="10px"
                 android:text="@string/before_ride"
-                android:textColor="@color/new_orange"
+                android:textColor="@color/themeColor"
                 android:textSize="40px"
 
                 />
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/pickup_charges"
-                android:textColor="@color/black"
+                android:textColor="@color/textColor"
                 android:textSize="34px"/>
 
             <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -75,7 +75,7 @@
                 android:layout_width="140px"
                 android:layout_height="wrap_content"
                 android:text="@string/per_format"
-                android:textColor="@color/grey_dark_less"
+                android:textColor="@color/textColorLight"
                 android:textSize="34px"/>
 
 
@@ -92,7 +92,7 @@
                     android:layout_below="@+id/textViewPickupCharges"
                     android:layout_marginTop="5px"
                     android:text=""
-                    android:textColor="@color/new_orange"
+                    android:textColor="@color/themeColor"
                     android:textSize="24px"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -101,7 +101,7 @@
                     android:layout_height="34px"
                     android:layout_marginTop="5px"
                     android:text="@string/NA"
-                    android:textColor="@color/grey_black_light"
+                    android:textColor="@color/textColorLight"
                     android:textSize="24px"/>
 
             </LinearLayout>
@@ -112,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="@string/NA"
-                android:textColor="@color/black"
+                android:textColor="@color/textColor"
                 android:textSize="34px"/>
 
         </RelativeLayout>
@@ -120,7 +120,9 @@
         <ImageView
         android:layout_width="match_parent"
         android:layout_height="2px"
-        android:background="@color/darker_grey_v2"/>
+        android:layout_marginStart="30px"
+        android:layout_marginEnd="30px"
+        android:background="@color/dividerColor"/>
 
 
         <LinearLayout
@@ -138,7 +140,7 @@
                 android:padding="10px"
                 android:layout_marginStart="30px"
                 android:text="@string/in_ride_rate"
-                android:textColor="@color/new_orange"
+                android:textColor="@color/themeColor"
                 android:textSize="40px"/>
 
             <LinearLayout
@@ -154,7 +156,7 @@
                     android:layout_marginTop="17px"
                     android:layout_weight="1"
                     android:text="@string/base_fare"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textColor"
                     android:textSize="34px"/>
 
                 <ImageView
@@ -179,7 +181,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/distance_lower"
-                        android:textColor="@color/black"
+                        android:textColor="@color/textColor"
                         android:textSize="34px"/>
 
                     <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -191,7 +193,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/per_format"
-                        android:textColor="@color/grey_dark_less"
+                        android:textColor="@color/textColorLight"
                         android:textSize="34px"/>
 
                 </RelativeLayout>
@@ -218,7 +220,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/time"
-                        android:textColor="@color/black"
+                        android:textColor="@color/textColor"
                         android:textSize="34px"/>
 
 
@@ -231,7 +233,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/per_min"
-                        android:textColor="@color/grey_dark_less"
+                        android:textColor="@color/textColorLight"
                         android:textSize="34px"/>
 
                 </RelativeLayout>
@@ -242,8 +244,7 @@
             <RelativeLayout
                 android:layout_width="672px"
                 android:layout_height="106px"
-                android:layout_gravity="center"
-                android:background="@color/white">
+                android:layout_gravity="center">
 
                 <TextView
                     android:id="@+id/textViewBaseFareValue"
@@ -252,7 +253,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="70px"
                     android:text="@string/NA"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textColor"
                     android:textSize="34px"/>
 
                 <TextView
@@ -262,7 +263,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:text="@string/NA"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textColor"
                     android:textSize="34px"/>
 
 
@@ -274,7 +275,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="70px"
                     android:text="@string/NA"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textColor"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -287,15 +288,18 @@
                 android:text="@string/diffrential_pricing_rate"
                 android:layout_marginStart="34px"
                 android:visibility="gone"
-                android:textColor="@color/grey_dark_less"
+                android:textColor="@color/textColorLight"
                 android:textSize="24px"
                 />
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="2px"
-                android:background="@color/darker_grey_v2"
-                android:layout_marginTop="30px"/>
+                android:background="@color/dividerColor"
+                android:layout_marginStart="30px"
+                android:layout_marginEnd="30px"
+                android:layout_marginTop="30px"
+                />
         </LinearLayout>
 
 
@@ -303,7 +307,7 @@
             android:id="@+id/textViewSpecialInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:textColor="@color/textColor"
             android:textSize="28px"
             android:padding="15px"
             android:visibility="gone"
@@ -324,7 +328,7 @@
                 android:layout_centerVertical="true"
                 android:padding="10px"
                 android:text="@string/referral_rate"
-                android:textColor="@color/new_orange"
+                android:textColor="@color/themeColor"
                 android:textSize="40px"
             />
 
@@ -351,7 +355,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/driver_to_customer"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textColor"
                     android:textSize="34px"/>
 
                 <ImageView
@@ -369,7 +373,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/driver_to_driver"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textColor"
                     android:textSize="34px"/>
 
 
@@ -395,7 +399,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/NA"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textColor"
                     android:textSize="34px"/>
 
                 <TextView
@@ -406,7 +410,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/NA"
-                    android:textColor="@color/black"
+                    android:textColor="@color/textColor"
                     android:textSize="34px"/>
 
             </LinearLayout>
@@ -429,7 +433,7 @@
                 android:layout_width="480px"
                 android:layout_height="48px"
                 android:text="@string/pickup_charges"
-                android:textColor="@color/black"
+                android:textColor="@color/textColor"
                 android:textSize="34px"/>
 
 
@@ -439,7 +443,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="00"
-                android:textColor="@color/black"
+                android:textColor="@color/textColor"
                 android:textSize="34px"/>
 
         </RelativeLayout>
