--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
@@ -413,7 +413,7 @@
             android:layout_marginTop="30px"
             android:background="@drawable/background_white_rounded_orange_bordered"
             android:text="@string/verify_me"
-            android:textColor="@color/new_orange"
+            android:textColor="@color/themeColor"
             android:textSize="@dimen/button_text_size"/>
 
         <TextView
