--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_upload_document.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_upload_document.xml
@@ -49,7 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="2px"
                 android:layout_gravity="bottom"
-                android:background="@color/new_orange"/>
+                android:background="@color/themeColor"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
