--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
@@ -618,7 +618,7 @@
                     android:layout_marginTop="22px"
                     android:background="@drawable/white_bg"
                     android:text="@string/skip"
-                    android:textColor="@color/new_orange"
+                    android:textColor="@color/themeColor"
                     android:textSize="@dimen/button_text_size"
                     android:visibility="gone"
                     />
