--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="495px"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:background="@color/bgColorDark"
+    android:background="@color/colorPrimaryDark"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:splitMotionEvents="false">
