--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
@@ -31,7 +31,7 @@
                 android:layout_marginStart="15px"
                 android:layout_marginTop="12px"
                 android:text="Ride"
-                android:textColor="@color/new_orange"
+                android:textColor="@color/themeColor"
                 android:textSize="36px"/>
 
             <RelativeLayout
@@ -60,7 +60,7 @@
                     android:layout_toEndOf="@+id/imageViewTime"
                     android:singleLine="true"
                     android:text="23 June, 2014 18:88 AM"
-                    android:textColor="@color/new_orange"
+                    android:textColor="@color/themeColor"
                     android:textSize="28px"
                     />
 
@@ -149,14 +149,14 @@
                 android:gravity="center"
                 android:singleLine="true"
                 android:text="@string/rupee_zero_zero"
-                android:textColor="@color/new_orange"
+                android:textColor="@color/themeColor"
                 android:textSize="55px"/>
 
 
             <ImageView
                 android:layout_width="300px"
                 android:layout_height="2px"
-                android:background="@color/new_orange"/>
+                android:background="@color/themeColor"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -198,7 +198,7 @@
                     android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
                     android:id="@+id/imageViewVertical"
-                    android:background="@color/new_orange"/>
+                    android:background="@color/themeColor"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
